--- a/templates/FirstPage.html
+++ b/templates/FirstPage.html
@@ -17,6 +17,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 	<style>
+		body {
+  background-color: #92a8d1;
+}
 	.main-heading{font-size: 20px;margin: 20px 0px;}
 	
 	html {
